# ML-Math-cpp

./: .gitignore  CMakeLists.txt  environment.yml
notebooks/: 01_algebra_lineal.ipynb  02_geometria_analitica.ipynb  03_descomposiciones_matrices.ipynb  04_calculo_vectorial.ipynb  05_probabilidad.ipynb  06_optimizacion_continua.ipynb
python_bindings/: bindings.cpp
src/capitulo2_algebra_lineal/: algebra_lineal.cpp  algebra_lineal.h
src/capitulo2_geometria_analitica/: geometria.cpp
src/capitulo3_descomposiciones_matrices/: descomposiciones.cpp  descomposiciones.h
src/capitulo3_geometria_analitica/: geometria.h
src/capitulo5_calculo_vectorial/: calculo.cpp  calculo.h
src/capitulo6_optimizacion/: optimizacion.h
src/capitulo6_probabilidad/: probabilidad.cpp  probabilidad.h
src/capitulo7_optimizacion/: optimizacion.cpp
